<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetStat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pcapfile">Pcap file:</string>
    <string name="pcapfilelength">0B</string>
    <string name="dump_start">Capture</string>
    <string name="dump_stop">Stop</string>
    <string name="analyze">Analyze</string>
    <string name="clear_cache">Clear cache</string>
    <string name="exit">Exit ?</string>
    <string name="select_pkg_name">Input the App name:</string>
    <string name="set_pkg_name">Set</string>
    <string name="select_pkg_type">Select the App type</string>
    <string name="accessed_servers">Accessed servers:</string>
    <string name="no_result">null</string>
    <string name="title_activity_net_quality_indicators">Net Quality Indicators</string>
    <string name="title_activity_packet_details">Packet Details</string>
    <string name="title_activity_set_weight">Set Weight</string>
    <string name="processing_hint">Processing</string>
    <string name="description_icon">Icon</string>
    <string name="notify_capturing">Capturing</string>
    <string name="retransmission">Retransmission:</string>
    <string name="avr_dns_time">Avr. DNS Time:</string>
    <string name="avr_tcp_conn_time">Avr. TCP Conn. Time:</string>
    <string name="avr_response_time">Avr. Response Time:</string>
    <string name="avr_loading_time">Avr. Loading Time:</string>
    <string name="avr_speed">Avr. Speed:</string>
    <string name="total_traffic">Total Traffic:</string>
    <string name="thread_numbers">Thread Numbers:</string>
    <string name="delay_jitter">Delay Jitter:</string>
    <string name="advertise">Advertise:</string>
    <string name="ResEfficiency">ResEfficiency:</string>
    <string name="SecureIndex">SecureIndex:</string>
    <string name="tradeTime">TradeTime:</string>
    

    <string-array name="pkg_types">
        <item>web</item>
        <item>download</item>
        <item>video</item>
        <item>trade</item>
        <item>game</item>
         <item>social</item>
    </string-array>

</resources>